<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name" translatable="false">SmartPack-Kernel Manager</string>
    <string name="checking_info">Checking info…</string>
    <string name="checking_root">Checking root access</string>
    <string name="searching_busybox">Searching for busybox</string>
    <string name="collecting_info">Collecting info</string>
    <string name="no_root">No root</string>
    <string name="no_busybox">No busybox</string>
    <string name="open">Open %s</string>
    <string name="busybox_message"><b>Why this issue happened?</b>\n\nA proper <i>BusyBox</i> installation is not found on your device. Unfortunately, SmartPack-Kernel Manager requires a number of <i>BusyBox</i> binaries to do several tasks (e.g. Auto-flashing)!\n\n\n<b>How to solve this issue?</b>\n\nPlease install a standalone <i>BusyBox</i> system to solve this issue. A free and open-sourced BusyBox Installer, which allow users to install <i>BusyBox</i> binaries in few clicks, made by our team is available in PlayStore!</string>
    <string name="busybox_install_message">Click here to get BusyBox Installer from PlayStore</string>
    <string name="no_root_message"><b>Why this issue happened?</b>\n\nYour device is either not rooted, or the root permission is declined for SmartPack-Kernel Manager by you!\n\n\n<b>Why root permission needed?</b>\n\nIn order to control kernel parameters, SmartPack-Kernel Manager need to modify some system files, that are not accessible without root!\n\n\n<b>How can I root my device?</b>\n\nA simple google search will help to find many guides to achieve root on your device. Please have a look at it!\n\n\n<b>Is rooting a device safe?</b>\n\nRooting poses some security risk, but it\'s generally safe to do!</string>
    <string name="select_picture">Select Picture</string>
    <string name="no_picture">No Picture</string>
    <string name="went_wrong">Something went wrong!</string>
    <string name="press_back_again_exit">Press back again to exit</string>
    <string name="cancel">Cancel</string>
    <string name="dismiss">Dismiss</string>
    <string name="ok">OK</string>
    <string name="yes">YES</string>
    <string name="unknown">Unknown</string>
    <string name="warning">Warning!</string>
    <string name="apply_on_boot">Apply on boot</string>
    <string name="apply_on_boot_text">Applying settings in %d seconds.</string>
    <string name="apply_on_boot_complete">Applying settings completed.</string>
    <string name="apply_on_boot_canceled">Applying settings canceled.</string>
    <string name="not_in_range">Not in range</string>
    <string name="options">Options</string>
    <string name="more">More</string>
    <string name="permission_denied_write_storage">Permission denied for writing to storage!</string>
    <string name="save">Save</string>
    <string name="mhz">MHz</string>
    <string name="celsius">°C</string>
    <string name="fahrenheit">°F</string>
    <string name="mb">MB</string>
    <string name="ms">ms</string>
    <string name="mv">mV</string>
    <string name="min">min</string>
    <string name="mah">mAh</string>
    <string name="ma">mA</string>
    <string name="kb">kB</string>
    <string name="px">px</string>
    <string name="minus" translatable="false">-</string>
    <string name="plus" translatable="false">+</string>
    <string name="statistics">Statistics</string>
    <string name="kernel">Kernel</string>
    <string name="tools">Tools</string>
    <string name="other">Other</string>
    <string name="overall">Overall</string>
    <string name="device">Device</string>
    <string name="memory">Memory</string>
    <string name="inputs">Inputs</string>
    <string name="cpu">CPU</string>
    <string name="cpu_hotplug">CPU Hotplug</string>
    <string name="cpu_voltage">CPU Voltage</string>
    <string name="gpu">GPU</string>
    <string name="thermal">Thermal</string>
    <string name="battery">Battery</string>
    <string name="sound">Sound</string>
    <string name="screen">Screen</string>
    <string name="wake">Wake Gestures</string>
    <string name="led">Display and LED</string>
    <string name="io_scheduler">I/O Scheduler</string>
    <string name="ksm">KSM</string>
    <string name="uksm">UKSM</string>
    <string name="lmk">Low Memory Killer</string>
    <string name="virtual_memory">Virtual Memory</string>
    <string name="entropy">Entropy</string>
    <string name="misc">Misc</string>
    <string name="custom_controls">Custom Controls</string>
    <string name="backup">Backup</string>
    <string name="build_prop_editor">Build prop Editor</string>
    <string name="profile">Profile</string>
    <string name="script_manger">Script Manager</string>
    <string name="on_boot">On Boot</string>
    <string name="settings">Settings</string>
    <string name="smartpack">SmartPack</string>
    <string name="about">About</string>
    <string name="contributors">Contributors</string>
    <string name="faq">FAQ</string>
    <string name="overall_summary">Welcome to the home page of SmartPack-Kernel Manager. This page provides very basic information of your device. Advanced kernel tweaking options can be found on respective pages.</string>
    <string name="cpu_times">CPU Times</string>
    <string name="offline">Offline</string>
    <string name="core">Core %d</string>
    <string name="gpu_freq">GPU Frequency</string>
    <string name="refresh">Refresh</string>
    <string name="reset">Reset</string>
    <string name="restore">Restore</string>
    <string name="restore_sure_message">Are you sure to restore %s?</string>
    <string name="cluster_big" translatable="false">big</string>
    <string name="cluster_middle" translatable="false">Middle</string>
    <string name="cluster_little" translatable="false">LITTLE</string>
    <string name="deep_sleep">Deep sleep</string>
    <string name="uptime">Uptime</string>
    <string name="error_frequencies">Failed to load frequencies</string>
    <string name="unused_frequencies">Unused Frequencies</string>
    <string name="processor">Processor</string>
    <string name="vendor">Vendor</string>
    <string name="features">Features</string>
    <string name="ram">RAM</string>
    <string name="android_version">Android Version</string>
    <string name="android_api_level">Android SDK</string>
    <string name="android_codename">Android Codename</string>
    <string name="fingerprint">Fingerprint</string>
    <string name="build_display_id">Build Display ID</string>
    <string name="baseband">Baseband</string>
    <string name="rom">ROM</string>
    <string name="bootloader">Bootloader</string>
    <string name="trustzone" translatable="false">TrustZone</string>
    <string name="hardware">Hardware</string>
    <string name="architecture">Architecture</string>
    <string name="treble_status">Project Treble Support</string>
    <string name="gpu_lib">GPU System Library</string>
    <string name="bus">Bus</string>
    <string name="product">Product</string>
    <string name="version">Version</string>
    <string name="sysfs" translatable="false">Sysfs</string>
    <string name="handlers">Handlers</string>
    <string name="cpu_note">Please note that some features on this page, such as CPU Cores and Frequency control, are largely controlled by system processes. As a result, changes made on this page may not persist on many devices.</string>
    <string name="cores_singular">%d core</string>
    <string name="cores">%d cores</string>
    <string name="cpu_usage">CPU Usage</string>
    <string name="cpu_usage_string">%s CPU Usage</string>
    <string name="no_offline_core">You can\'t offline this core!</string>
    <string name="cpu_max_freq">CPU Maximum Frequency</string>
    <string name="cpu_max_freq_summary">Set the maximum frequency the CPU scales up to.</string>
    <string name="cpu_min_freq">CPU Minimum Frequency</string>
    <string name="cpu_min_freq_summary">Set the minimum frequency the CPU scales down to.</string>
    <string name="cpu_max_screen_off_freq">CPU Maximum Screen Off Frequency</string>
    <string name="delay">Delay</string>
    <string name="global_offset">Global Offset</string>
    <string name="update_channel_create">Create Update Channel</string>
    <string name="update_channel_message">(<i>for developers only</i>)\nApp will create an update channel (json) for your kernel, as long as the information\'s provided in this page are accurate.</string>
    <string name="update_channel_instructions"><b>Kernel Name</b>, <b>Kernel Version</b> &amp; <b>Download Link</b> are the mandatory fields to be filled before clicking the create button.\n\n<b>Change-logs</b> could be provided, either as a well formatted text, or as a link to an online page.\n\nSecure Hash Algorithm (<b>sha1</b>) is optional, but highly recommended to ensure the authenticity of the downloaded kernel.</string>
    <string name="kernel_name">Kernel Name</string>
    <string name="kernel_name_summary">Kernel_name</string>
    <string name="kernel_version">Kernel Version</string>
    <string name="kernel_version_summary">Kernel_version</string>
    <string name="download_link">Download Link</string>
    <string name="download_link_summary">download_link</string>
    <string name="changelog_summary">changelog_texts_or_url</string>
    <string name="sha1">Secure Hash Algorithm</string>
    <string name="sha1_summary">sha1</string>
    <string name="support_group">Support Group</string>
    <string name="support_group_summary">support_link</string>
    <string name="donation_link">Donation Link</string>
    <string name="donation_link_summary">donation_link</string>
    <string name="clear">Clear All</string>
    <string name="check_update">Check for Updates</string>
    <string name="fahrenheit_summary">Use fahrenheit to measure temperature</string>
    <string name="force_english">Force displaying english language</string>
    <string name="user_interface">User interface</string>
    <string name="dark_theme">Dark Theme</string>
    <string name="material_icon">Material Icon</string>
    <string name="banner_resizer">Banner Resizer</string>
    <string name="hide_banner">Hide Banner</string>
    <string name="force_cards_summary">Use cards for items if possible</string>
    <string name="accent_color">Accent Color</string>
    <string name="section_icons">Section Icons</string>
    <string name="enable_onboot">Enable On Boot</string>
    <string name="enable_onboot_summary">Allow SmartPack-Kernel Manager to run On Boot settings!</string>
    <string name="apply_on_boot_test_summary">Test apply on boot. This includes all kind of things which are getting applied during booting, such as custom controls, profiles, init.d, etc.</string>
    <string name="test">Test</string>
    <string name="hide">Hide</string>
    <string name="apply_on_boot_hide_summary">Hide the notification of apply on boot. Delay will still remain!</string>
    <string name="toast">Toast</string>
    <string name="confirmation_notification">Confirmation Notification</string>
    <string name="apply_on_boot_confirmation_notification_summary">After apply on boot with visible notification, show a notification afterwards with the confirmation that apply on boot was successful.</string>
    <string name="script">Script</string>
    <string name="apply_on_boot_script_summary">Use a shell script to apply settings. Please only enable this if you have troubles with apply on boot. If the problem still persists after enabling this option, please make sure no other app is conflicting with SmartPack-Kernel Manager.</string>
    <string name="security">Security</string>
    <string name="sections">Sections</string>
    <string name="default_section">Default Section</string>
    <string name="default_section_summary">The default tab to be displayed when opening the app!</string>
    <string name="change_logs">Change-logs</string>
</resources>