<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical">

    <View
        android:id="@+id/splash_background"
        android:layout_width="match_parent"
        android:layout_height="160dp" />

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="68dp"
        android:gravity="center_vertical"
        android:paddingStart="38dp"
        android:paddingEnd="38dp"
        android:text="@string/checking_info"
        android:textColor="@color/colorOnPrimary"
        android:textSize="22sp" />

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardCornerRadius="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:padding="16dp">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/root_access_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:text="@string/checking_root" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/busybox_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:text="@string/searching_busybox" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/info_collect_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:text="@string/collecting_info" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/info_update"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:visibility="gone"
                android:text="@string/check_update" />

        </LinearLayout>
        <ProgressBar
            style="@style/Base.Widget.AppCompat.ProgressBar.Horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-7dp"
            android:indeterminate="true" />
    </com.google.android.material.card.MaterialCardView>
</LinearLayout>